--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -3,7 +3,7 @@
 	<div class="uk-panel uk-panel-space uk-margin-large-top" itemscope itemtype="http://schema.org/Organization" data-margin>
 		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">Twitter</span><i class="uk-icon-twitter uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
 		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">Dribbble</span><i class="uk-icon-dribbble uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
-		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">Facebook</span><i class="uk-icon-facebook uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
+		<a href="https://www.facebook.com/OffTheMatAotearoaNZ/" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">Facebook</span><i class="uk-icon-facebook uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
 		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">Pinterest</span><i class="uk-icon-pinterest uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
 		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">LinkedIn</span><i class="uk-icon-linkedin uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
 		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">Flickr</span><i class="uk-icon-flickr uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
@@ -13,7 +13,7 @@
 		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover uk-margin-right" itemprop="sameAs"><span class="uk-hidden">Tumblr</span><i class="uk-icon-tumblr uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
 		<a href="#" title="" target="_blank" rel="nofollow" class="uk-animation-hover" itemprop="sameAs"><span class="uk-hidden">Youtube</span><i class="uk-icon-youtube-play uk-icon-medium uk-animation-reverse uk-animation-scale"></i></a>
 
-	</div>  
+	</div>
 
 <div class="uk-panel uk-margin-space uk-margin-large uk-text-small uk-text-muted">
 	<div class="uk-clearfix">&copy; {{date format="YYYY"}} - {{@blog.title}}</div>
