link to signupform in default.hbs line19

--- a/default.hbs
+++ b/default.hbs
@@ -16,7 +16,7 @@
 <meta name="robots" content="index,follow">
 <link rel="icon" href="{{asset "/favicon.ico"}}">
 <link rel="apple-touch-icon" href="{{asset "/apple-icon-touch.png"}}">
-<link rel="alternate" href="{{@blog.url}}/rss/" title="{{@blog.title}} » Feed" type="application/rss+xml">
+<link rel="alternate" href="http://eepurl.com/ccSeKL" title="{{@blog.title}} » Feed" type="application/rss+xml">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700,400" type="text/css">
 <link rel="stylesheet" href="{{asset "css/uikit.min.css"}}" id="base-stylesheet-css" type="text/css">
 <link rel="stylesheet" href="{{asset "css/custom.css"}}" id="custom-stylesheet-css" type="text/css">
