edit link to favicon in default.hbs

--- a/default.hbs
+++ b/default.hbs
@@ -14,7 +14,7 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index,follow">
-<link rel="icon" href="{{asset "/favicon.ico"}}">
+<link rel="shortcut icon" href="{{asset "/favicon.ico"}}">
 <link rel="apple-touch-icon" href="{{asset "/apple-icon-touch.png"}}">
 <link rel="alternate" href="http://eepurl.com/ccSeKL" title="{{@blog.title}} » Feed" type="application/rss+xml">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700,400" type="text/css">
