--- a/default.hbs
+++ b/default.hbs
@@ -15,7 +15,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="index,follow">
 <link rel="shortcut icon" href="{{asset "/favicon.ico"}}">
-<link rel="apple-touch-icon" href="{{asset "/apple-icon-touch.png"}}">
+<!-- <link rel="apple-touch-icon" href="{{asset "/apple-icon-touch.png"}}"> -->
 <link rel="alternate" href="http://eepurl.com/ccSeKL" title="{{@blog.title}} » Feed" type="application/rss+xml">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:700,400" type="text/css">
 <link rel="stylesheet" href="{{asset "css/uikit.min.css"}}" id="base-stylesheet-css" type="text/css">
